# kvguard

./: .gitignore  CLAUDE.md  Makefile  README.md  VALIDATION_REPORT.md  pyproject.toml
.claude/: settings.json
.claude/agents/: data-analyst.md  experiment-reviewer.md  paper-writer.md  sweep-monitor.md
.claude/commands/: decide.md
.claude/rules/: experiments.md  paper.md  python.md  tests.md
docs/: architecture.md  decisions.jsonl  decisions.md  failures.md  findings.md  related-work-positioning.md  v2-plan.md
docs/analysis/: 002-sota-to-experiment-mapping.md
docs/experiments/: 001-reproduce-failures.md
docs/plans/: ORCHESTRATION.md  (+1 more)
models/: hazard_predictor.json  metrics.json
paper/: discussion.tex  introduction.tex  main.aux  main.bbl  main.blg  main.out  main.tex  method.tex  references.bib  related_work.tex  results.tex
scripts/: analyze_failure_modes.py  analyze_lead_times.py  analyze_phase_transitions.py  check_status.sh  download_models.sh  failure_mode_classifier.py  generate_figures.py  run_ablations.py  run_phase2.sh  setup_server.sh  sweep.sh
tests/: conftest.py  helpers.py  test_analyze.py  test_analyze_failure_modes.py  test_analyze_lead_times.py  test_analyze_live.py  test_analyze_phase_transitions.py  test_checkpoint.py  test_config.py  test_controller.py  test_detectors.py  test_evaluate_controller.py  test_experiment.py  test_failure_mode_classifier.py  test_features.py  test_generate_figures.py  test_integration.py  test_labeling.py  test_live.py  test_prompts.py  test_run_ablations.py  test_signals.py  test_train.py  test_verify.py
(+21 files in other folders)
